force-app/main/default/objects/Buyer_Purchase__c/Buyer_Purchase__c.object-meta.xml
<CustomObject>
    <label>Buyer Purchase</label>
    <pluralLabel>Buyer Purchases</pluralLabel>
    <nameField>
        <label>Buyer Purchase Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>