force-app/main/default/objects/Buyer_Purchase__c/fields/AI_Personalization_Summary__c.field-meta.xml
<CustomField>
    <fullName>AI_Personalization_Summary__c</fullName>
    <label>AI Personalization Summary</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>