force-app/main/default/objects/Buyer_Purchase__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <label>Buyer</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Buyer Purchases</relationshipLabel>
    <relationshipName>Buyer_Purchases</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>