force-app/main/default/objects/Buyer_Purchase__c/fields/External_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Order_ID__c</fullName>
    <label>External Order ID</label>
    <type>Text</type>
    <length>80</length>
    <unique>true</unique>
    <externalId>true</externalId>
</CustomField>