force-app/main/default/objects/Buyer_Purchase__c/fields/Items_Summary__c.field-meta.xml
<CustomField>
    <fullName>Items_Summary__c</fullName>
    <label>Items Summary</label>
    <type>LongTextArea</type>
    <length>4000</length>
</CustomField>