force-app/main/default/objects/Buyer_Purchase__c/fields/Next_Best_Offer__c.field-meta.xml
<CustomField>
    <fullName>Next_Best_Offer__c</fullName>
    <label>Next Best Offer</label>
    <type>Text</type>
    <length>255</length>
</CustomField>