force-app/main/default/objects/Buyer_Purchase__c/fields/Order_Total__c.field-meta.xml
<CustomField>
    <fullName>Order_Total__c</fullName>
    <label>Order Total</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
</CustomField>